--- a/payment.html
+++ b/payment.html
@@ -19,293 +19,207 @@
             --radius: 18px;
             --shadow: rgba(0,0,0,0.55);
         }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
+        * { margin:0; padding:0; box-sizing:border-box; }
         body {
-            font-family: "Outfit", sans-serif;
-            background: var(--bg);
-            color: var(--text);
-            min-height: 100vh;
+            font-family:"Outfit", sans-serif;
+            background:var(--bg);
+            color:var(--text);
+            min-height:100vh;
         }
-
         header {
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            background: rgba(20,21,26,0.7);
-            backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(10px);
-            padding: 16px 20px;
-            display: flex;
-            align-items: center;
-            gap: 16px;
-            border-bottom: 1px solid var(--border);
+            position:sticky;
+            top:0;
+            z-index:100;
+            background:rgba(20,21,26,0.7);
+            backdrop-filter:blur(10px);
+            padding:16px 20px;
+            display:flex;
+            align-items:center;
+            gap:16px;
+            border-bottom:1px solid var(--border);
         }
-
         .back-btn {
-            width: 46px;
-            height: 46px;
-            border-radius: 14px;
-            background: var(--glass);
-            border: none;
-            display: grid;
-            place-items: center;
-            cursor: pointer;
-            color: var(--primary);
-            font-size: 1.6rem;
-            transition: 0.25s;
+            width:46px; height:46px;
+            border-radius:14px;
+            background:var(--glass);
+            border:none;
+            display:grid; place-items:center;
+            cursor:pointer;
+            color:var(--primary);
+            font-size:1.6rem;
+            transition:0.25s;
         }
-
-        .back-btn:hover {
-            background: rgba(255,255,255,0.1);
-        }
-
+        .back-btn:hover { background:rgba(255,255,255,0.1); }
         h1 {
-            font-size: 1.5rem;
-            font-weight: 700;
-            color: var(--text);
-            flex: 1;
+            font-size:1.5rem;
+            font-weight:700;
+            color:var(--text);
+            flex:1;
         }
-
         .container {
-            padding: 20px;
-            padding-bottom: 240px;
+            padding:20px;
+            padding-bottom:240px;
         }
-
         .login-required {
-            text-align: center;
-            padding: 140px 24px;
-            color: #ff6b6b;
-            font-size: 1.3rem;
+            text-align:center;
+            padding:140px 24px;
+            color:#ff6b6b;
+            font-size:1.3rem;
         }
-
         .login-required a {
-            color: var(--primary);
-            text-decoration: none;
-            font-weight: 700;
+            color:var(--primary);
+            text-decoration:none;
+            font-weight:700;
         }
-
         .section-title {
-            font-size: 1.4rem;
-            font-weight: 700;
-            color: var(--primary);
-            margin: 28px 0 14px;
+            font-size:1.4rem;
+            font-weight:700;
+            color:var(--primary);
+            margin:28px 0 14px;
         }
-
         label {
-            display: block;
-            font-weight: 500;
-            margin-bottom: 8px;
-            color: var(--text-muted);
-            font-size: 0.95rem;
+            display:block;
+            font-weight:500;
+            margin-bottom:8px;
+            color:var(--text-muted);
+            font-size:0.95rem;
         }
-
         input, textarea {
-            width: 100%;
-            padding: 14px 16px;
-            background: #1a1b20;
-            border: 1px solid var(--border);
-            border-radius: 14px;
-            color: var(--text);
-            font-size: 1rem;
-            font-family: inherit;
+            width:100%;
+            padding:14px 16px;
+            background:#1a1b20;
+            border:1px solid var(--border);
+            border-radius:14px;
+            color:var(--text);
+            font-size:1rem;
+            font-family:inherit;
         }
-
         input[readonly] {
-            background: #111217;
-            color: var(--text-muted);
+            background:#111217;
+            color:var(--text-muted);
         }
-
         textarea {
-            min-height: 120px;
-            resize: vertical;
+            min-height:120px;
+            resize:vertical;
         }
-
         input:focus, textarea:focus {
-            border-color: var(--primary);
-            box-shadow: 0 0 0 3px rgba(230,178,92,0.15);
-            outline: none;
+            border-color:var(--primary);
+            box-shadow:0 0 0 3px rgba(230,178,92,0.15);
+            outline:none;
         }
-
         .cart-item-card {
-            background: var(--card);
-            padding: 14px 16px;
-            border-radius: var(--radius);
-            border: 1px solid var(--border);
-            margin-bottom: 14px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            box-shadow: 0 6px 20px var(--shadow);
+            background:var(--card);
+            padding:14px 16px;
+            border-radius:var(--radius);
+            border:1px solid var(--border);
+            margin-bottom:14px;
+            display:flex;
+            justify-content:space-between;
+            align-items:center;
+            box-shadow:0 6px 20px var(--shadow);
         }
-
-        .item-left {
-            flex: 1;
-        }
-
-        .cart-item-name {
-            font-size: 1.15rem;
-            font-weight: 700;
-            color: var(--text);
-        }
-
-        .cart-item-detail {
-            font-size: 0.95rem;
-            color: var(--text-muted);
-            margin-top: 4px;
-        }
-
-        .cart-item-price {
-            font-size: 1.2rem;
-            font-weight: 800;
-            color: var(--primary);
-            margin-top: 6px;
-        }
-
-        .qty-info {
-            font-weight: 700;
-            color: var(--text-muted);
-            font-size: 1.1rem;
-        }
-
+        .item-left { flex:1; }
+        .cart-item-name { font-size:1.15rem; font-weight:700; color:var(--text); }
+        .cart-item-detail { font-size:0.95rem; color:var(--text-muted); margin-top:4px; }
+        .cart-item-price { font-size:1.2rem; font-weight:800; color:var(--primary); margin-top:6px; }
+        .qty-info { font-weight:700; color:var(--text-muted); font-size:1.1rem; }
         .summary {
-            background: var(--card);
-            padding: 20px;
-            border-radius: var(--radius);
-            box-shadow: 0 -8px 30px var(--shadow);
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            z-index: 99;
-            border-top: 1px solid var(--border);
+            background:var(--card);
+            padding:20px;
+            border-radius:var(--radius);
+            box-shadow:0 -8px 30px var(--shadow);
+            position:fixed;
+            bottom:0; left:0; right:0;
+            z-index:99;
+            border-top:1px solid var(--border);
         }
-
         .summary-row {
-            display: flex;
-            justify-content: space-between;
-            font-size: 1.1rem;
-            margin: 12px 0;
-            color: var(--text-muted);
+            display:flex;
+            justify-content:space-between;
+            font-size:1.1rem;
+            margin:12px 0;
+            color:var(--text-muted);
         }
-
         .grand-total {
-            font-size: 1.5rem;
-            font-weight: 800;
-            color: var(--primary);
-            padding-top: 14px;
-            border-top: 1px solid var(--border);
+            font-size:1.5rem;
+            font-weight:800;
+            color:var(--primary);
+            padding-top:14px;
+            border-top:1px solid var(--border);
         }
-
         .order-btn {
-            background: var(--primary);
-            color: #000;
-            border: none;
-            width: 100%;
-            padding: 16px;
-            font-size: 1.3rem;
-            font-weight: 800;
-            border-radius: 14px;
-            cursor: pointer;
-            margin-top: 16px;
-            box-shadow: 0 6px 20px rgba(230,178,92,0.35);
-            transition: all 0.25s;
+            background:var(--primary);
+            color:#000;
+            border:none;
+            width:100%;
+            padding:16px;
+            font-size:1.3rem;
+            font-weight:800;
+            border-radius:14px;
+            cursor:pointer;
+            margin-top:16px;
+            box-shadow:0 6px 20px rgba(230,178,92,0.35);
+            transition:all 0.25s;
         }
-
         .order-btn:hover {
-            background: var(--primary-dark);
-            transform: translateY(-2px);
-            box-shadow: 0 10px 30px rgba(230,178,92,0.45);
+            background:var(--primary-dark);
+            transform:translateY(-2px);
+            box-shadow:0 10px 30px rgba(230,178,92,0.45);
         }
-
         .order-btn:disabled {
-            background: #444;
-            color: #888;
-            cursor: not-allowed;
-            box-shadow: none;
+            background:#444;
+            color:#888;
+            cursor:not-allowed;
+            box-shadow:none;
         }
-
         .min-note {
-            color: #ff6b6b;
-            font-size: 0.95rem;
-            text-align: center;
-            margin-top: 12px;
+            color:#ff6b6b;
+            font-size:0.95rem;
+            text-align:center;
+            margin-top:12px;
         }
-
         .empty-state {
-            text-align: center;
-            padding: 100px 20px;
-            color: var(--text-muted);
-            font-size: 1.3rem;
+            text-align:center;
+            padding:100px 20px;
+            color:var(--text-muted);
+            font-size:1.3rem;
         }
     </style>
 </head>
 <body>
-
 <header>
     <button class="back-btn" onclick="history.back()">←</button>
     <h1>Checkout</h1>
 </header>
-
 <div class="container">
-
-    <!-- Login required -->
     <div id="loginRequired" class="login-required" style="display:none;">
         <p>Please login to place your order</p>
         <p><a href="login.html">Login Now →</a></p>
     </div>
-
-    <!-- Main content -->
     <div id="checkoutContent" style="display:none;">
-
         <div class="section-title">Delivery Details</div>
         <div style="background:var(--card); padding:20px; border-radius:var(--radius); border:1px solid var(--border); margin-bottom:24px; box-shadow:0 8px 30px var(--shadow);">
             <label>Full Name</label>
             <input type="text" id="name" readonly>
-
             <label style="margin-top:20px;">Phone Number</label>
             <input type="tel" id="phone" readonly>
-
             <label style="margin-top:20px;">Delivery Address <span style="color:#ff6b6b;">*</span></label>
             <textarea id="address" placeholder="House no., Street, Landmark, Area, City, PIN code" required></textarea>
         </div>
-
         <div class="section-title">Your Order</div>
         <div id="itemsContainer"></div>
-
     </div>
 </div>
 
-<!-- Fixed Summary -->
 <div class="summary" id="summaryBox" style="display:none;">
-    <div class="summary-row">
-        <span>Subtotal</span>
-        <span id="subtotal">₹0</span>
-    </div>
-    <div class="summary-row">
-        <span>Delivery</span>
-        <span id="delivery">₹0</span>
-    </div>
-    <div class="grand-total">
-        Total: <span id="grandTotal">₹0</span>
-    </div>
-
+    <div class="summary-row"><span>Subtotal</span><span id="subtotal">₹0</span></div>
+    <div class="summary-row"><span>Delivery</span><span id="delivery">₹0</span></div>
+    <div class="grand-total">Total: <span id="grandTotal">₹0</span></div>
     <div id="minNote" class="min-note" style="display:none;"></div>
-
     <button class="order-btn" id="placeOrderBtn" disabled>Place Order</button>
 </div>
 
 <script>
-    // ────────────────────────────────────────────────
-    //  The JavaScript remains EXACTLY THE SAME
-    //  Only visual theme was changed
-    // ────────────────────────────────────────────────
-
     const DELIVERY_THRESHOLD = 100;
     const DELIVERY_FEE = 20;
 
@@ -324,10 +238,8 @@
     } else {
         document.getElementById("loginRequired").style.display = "none";
         document.getElementById("checkoutContent").style.display = "block";
-
         document.getElementById("name").value = loggedUser.name || "User";
         document.getElementById("phone").value = loggedUser.phone || "";
-
         renderOrder();
     }
 
@@ -343,13 +255,11 @@
 
     function renderOrder() {
         itemsContainer.innerHTML = "";
-
         if (Object.keys(cart).length === 0) {
             itemsContainer.innerHTML = '<div class="empty-state">Your cart is empty</div>';
             summaryBox.style.display = "none";
             return;
         }
-
         summaryBox.style.display = "block";
 
         Object.entries(cart).forEach(([shop, items]) => {
@@ -369,10 +279,8 @@
                     </div>
                 `;
             });
-
             itemsContainer.appendChild(shopDiv);
         });
-
         updateSummary();
     }
 
@@ -389,14 +297,12 @@
             placeOrderBtn.disabled = true;
             return;
         }
-
         placeOrderBtn.disabled = false;
         minNote.style.display = "none";
     }
 
     async function placeOrder() {
         const address = document.getElementById("address").value.trim();
-
         if (!address) {
             alert("Please enter your complete delivery address");
             return;
@@ -437,9 +343,23 @@
             const result = await response.json();
 
             if (result.success) {
+                // Save to localStorage (as array)
+                let orders = JSON.parse(localStorage.getItem("chatpoint_orders") || "[]");
+                const newOrder = {
+                    ...orderData,
+                    _id: result.orderId || "local-" + Date.now(),  // fallback id
+                    status: "pending"
+                };
+                orders.push(newOrder);
+                localStorage.setItem("chatpoint_orders", JSON.stringify(orders));
+
                 alert(`Order placed successfully! Order ID: ${result.orderId || '—'}`);
+
+                // Clear cart
                 localStorage.removeItem("chatpoint_cart");
-                window.location.href = "tracking.html";
+
+                // Redirect to home instead of tracking
+                window.location.href = "index.html";
             } else {
                 alert("Order could not be placed: " + (result.message || "Unknown error"));
                 placeOrderBtn.disabled = false;
@@ -454,7 +374,6 @@
     }
 
     document.getElementById("placeOrderBtn").onclick = placeOrder;
-
     renderOrder();
 </script>
 </body>
