--- a/login.html
+++ b/login.html
@@ -1,68 +1,384 @@
-// Example using Express & Mongoose
-const express = require('express');
-const mongoose = require('mongoose');
-const bcrypt = require('bcryptjs');
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>ChatPoint — Login / Signup</title>
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700;800;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <style>
+    :root {
+      --bg: #0d0e12;
+      --card: #14151a;
+      --text: #e6e6e6;
+      --muted: #9b9ca1;
+      --primary: #e6b25c;
+      --primary-dark: #bb8c3d;
+      --radius: 18px;
+      --shadow: 0 16px 48px rgba(0,0,0,0.55);
+      --transition: all 0.28s cubic-bezier(0.2, 0.8, 0.2, 1);
+    }
+    *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
+    body {
+      font-family: 'Outfit', sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      min-height: 100dvh;
+      display: grid;
+      place-items: center;
+      padding: 16px;
+    }
+    .container { width: 100%; max-width: 420px; position: relative; z-index: 10; }
+    .card {
+      background: var(--card);
+      border-radius: var(--radius);
+      padding: 36px 32px;
+      box-shadow: var(--shadow);
+      border: 1px solid rgba(255,255,255,0.08);
+      text-align: center;
+    }
+    .brand {
+      font-size: 32px;
+      font-weight: 900;
+      color: var(--primary);
+      margin-bottom: 24px;
+      letter-spacing: -1px;
+    }
+    .lead {
+      font-size: 22px;
+      font-weight: 700;
+      color: var(--text);
+      margin-bottom: 28px;
+    }
+    .form-group {
+      margin-bottom: 18px;
+      text-align: left;
+    }
+    .input {
+      width: 100%;
+      padding: 16px 18px;
+      border-radius: 12px;
+      border: 1px solid rgba(255,255,255,0.1);
+      background: #1a1b20;
+      color: var(--text);
+      font-size: 16px;
+      outline: none;
+      transition: var(--transition);
+    }
+    .input:focus {
+      border-color: var(--primary);
+      box-shadow: 0 0 0 3px rgba(230,178,92,0.2);
+    }
+    .btn {
+      width: 100%;
+      padding: 16px;
+      margin-top: 12px;
+      background: var(--primary);
+      color: #000;
+      border: none;
+      border-radius: 12px;
+      font-weight: 800;
+      font-size: 17px;
+      cursor: pointer;
+      transition: var(--transition);
+      box-shadow: 0 6px 20px rgba(230,178,92,0.3);
+    }
+    .btn:hover {
+      background: var(--primary-dark);
+      transform: translateY(-2px);
+    }
+    .toggle-text {
+      margin-top: 24px;
+      font-size: 15px;
+      color: var(--muted);
+    }
+    .toggle-text a {
+      color: var(--primary);
+      font-weight: 700;
+      text-decoration: none;
+    }
+    .toggle-text a:hover {
+      text-decoration: underline;
+    }
+    #loadingOverlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(13,14,18,0.95);
+      backdrop-filter: blur(8px);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    }
+    #loadingOverlay.active { display: flex; }
+    .loader {
+      width: 90%;
+      max-width: 400px;
+      text-align: center;
+      color: white;
+    }
+    .progress-bar {
+      height: 10px;
+      background: rgba(255,255,255,0.1);
+      border-radius: 10px;
+      overflow: hidden;
+      margin: 20px 0;
+    }
+    .progress-fill {
+      height: 100%;
+      width: 0%;
+      background: var(--primary);
+      border-radius: 10px;
+      transition: width 0.4s ease;
+    }
+    #toast-container {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 10000;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+    .toast {
+      min-width: 320px;
+      padding: 16px 20px;
+      background: #1f1f1f;
+      color: white;
+      border-radius: 10px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.4);
+      opacity: 0;
+      transform: translateX(120%);
+      transition: all 0.4s ease;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .toast.show {
+      opacity: 1;
+      transform: translateX(0);
+    }
+    .toast.success { background: #2e7d32; }
+    .toast.error { background: #c62828; }
+    .toast .close-btn {
+      cursor: pointer;
+      font-size: 20px;
+      margin-left: 16px;
+    }
+    @media (max-width: 480px) {
+      .card { padding: 28px 20px; }
+      .brand { font-size: 28px; }
+      .lead { font-size: 20px; }
+      #toast-container { right: 12px; left: 12px; top: 12px; }
+      .toast { min-width: auto; }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="card">
+      <div class="brand">ChatPoint</div>
 
-const app = express();
-app.use(express.json());
+      <!-- Login Form -->
+      <div id="loginForm">
+        <div class="lead">Welcome back!</div>
+        <div class="form-group">
+          <input type="tel" id="loginPhone" class="input" placeholder="Phone number" maxlength="10" inputmode="numeric" />
+        </div>
+        <div class="form-group">
+          <input type="password" id="loginPassword" class="input" placeholder="Password" />
+        </div>
+        <button class="btn" id="btnLogin">Login</button>
+        <div class="toggle-text">New to ChatPoint? <a href="#" id="showSignup">Create account</a></div>
+      </div>
 
-// User Schema
-const userSchema = new mongoose.Schema({
-  name: { type: String, required: true },
-  phone: { type: String, required: true, unique: true },
-  password: { type: String, required: true }
-});
+      <!-- Signup Form -->
+      <div id="signupForm" style="display:none">
+        <div class="lead">Join ChatPoint</div>
+        <div class="form-group">
+          <input type="text" id="signupName" class="input" placeholder="Full name" />
+        </div>
+        <div class="form-group">
+          <input type="tel" id="signupPhone" class="input" placeholder="Phone number" maxlength="10" inputmode="numeric" />
+        </div>
+        <div class="form-group">
+          <input type="password" id="signupPassword" class="input" placeholder="Create password" />
+        </div>
+        <button class="btn" id="btnSignup">Sign Up</button>
+        <div class="toggle-text">Already have an account? <a href="#" id="showLogin">Sign in</a></div>
+      </div>
+    </div>
+  </div>
 
-const User = mongoose.model('User', userSchema);
+  <!-- Loading Overlay -->
+  <div id="loadingOverlay">
+    <div class="loader">
+      <div class="progress-bar"><div class="progress-fill" id="progressFill"></div></div>
+      <div id="loaderText">Processing...</div>
+    </div>
+  </div>
 
-// Signup
-app.post('/api/signup', async (req, res) => {
-  try {
-    const { name, phone, password } = req.body;
+  <!-- Toast Container -->
+  <div id="toast-container"></div>
 
-    if (!name || !phone || !password) {
-      return res.status(400).json({ success: false, message: 'All fields required' });
+  <script>
+    const $ = id => document.getElementById(id);
+
+    // Loading helpers
+    function showLoading() {
+      $('loadingOverlay').classList.add('active');
+      let w = 10;
+      const int = setInterval(() => {
+        w = Math.min(w + 8, 94);
+        $('progressFill').style.width = w + '%';
+      }, 280);
+      let dots = 0;
+      const textInt = setInterval(() => {
+        $('loaderText').textContent = 'Processing' + '.'.repeat((dots++ % 3) + 1);
+      }, 500);
+      return () => { clearInterval(int); clearInterval(textInt); };
     }
 
-    const existing = await User.findOne({ phone });
-    if (existing) {
-      return res.status(400).json({ success: false, message: 'Phone number already registered' });
+    function hideLoading() {
+      $('progressFill').style.width = '100%';
+      setTimeout(() => {
+        $('loadingOverlay').classList.remove('active');
+        $('progressFill').style.width = '0%';
+      }, 600);
     }
 
-    const hashedPassword = await bcrypt.hash(password, 10);
+    // Toast notification
+    function showToast(message, type = 'info', duration = 4000) {
+      const container = $('toast-container');
+      const toast = document.createElement('div');
+      toast.className = `toast ${type}`;
+      toast.innerHTML = `
+        <span>${message}</span>
+        <span class="close-btn" onclick="this.parentElement.remove()">×</span>
+      `;
+      container.appendChild(toast);
+      setTimeout(() => toast.classList.add('show'), 80);
+      if (duration > 0) {
+        setTimeout(() => {
+          toast.classList.remove('show');
+          setTimeout(() => toast.remove(), 400);
+        }, duration);
+      }
+    }
 
-    const user = new User({ name, phone, password: hashedPassword });
-    await user.save();
+    const isValidPhone = p => /^\d{10}$/.test(p.trim());
 
-    res.json({
-      success: true,
-      user: { _id: user._id, name: user.name, phone: user.phone }
+    // SIGNUP - Saves to MongoDB + localStorage (same format as before)
+    $('btnSignup').onclick = async () => {
+      const name = $('signupName').value.trim();
+      const phone = $('signupPhone').value.trim();
+      const password = $('signupPassword').value;
+
+      if (!name || !phone || !password) return showToast('Please fill all fields', 'error');
+      if (!isValidPhone(phone)) return showToast('Enter valid 10-digit phone number', 'error');
+
+      const stopLoading = showLoading();
+
+      try {
+        const response = await fetch('/api/signup', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ name, phone, password })
+        });
+
+        const result = await response.json();
+
+        if (result.success) {
+          // Save to localStorage - same format your other pages expect
+          localStorage.setItem('chatpoint_user', JSON.stringify({
+            name: result.user.name,
+            phone: result.user.phone,
+            _id: result.user._id || null  // _id from MongoDB
+          }));
+
+          showToast(`Welcome ${name}! Account created successfully.`, 'success', 4000);
+          setTimeout(() => location.href = 'index.html', 1500);
+        } else {
+          showToast(result.message || 'Signup failed. Try again.', 'error');
+        }
+      } catch (err) {
+        showToast('Network error. Please check your connection.', 'error');
+        console.error(err);
+      } finally {
+        stopLoading();
+        hideLoading();
+      }
+    };
+
+    // LOGIN - Checks MongoDB + saves to localStorage
+    $('btnLogin').onclick = async () => {
+      const phone = $('loginPhone').value.trim();
+      const password = $('loginPassword').value;
+
+      if (!phone || !password) return showToast('Please fill all fields', 'error');
+      if (!isValidPhone(phone)) return showToast('Enter valid 10-digit phone number', 'error');
+
+      const stopLoading = showLoading();
+
+      try {
+        const response = await fetch('/api/login', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ phone, password })
+        });
+
+        const result = await response.json();
+
+        if (result.success) {
+          // Save to localStorage - same format
+          localStorage.setItem('chatpoint_user', JSON.stringify({
+            name: result.user.name,
+            phone: result.user.phone,
+            _id: result.user._id || null
+          }));
+
+          showToast('Login successful! Redirecting...', 'success', 3000);
+          setTimeout(() => location.href = 'index.html', 1200);
+        } else {
+          showToast(result.message || 'Invalid phone number or password', 'error');
+        }
+      } catch (err) {
+        showToast('Network error. Please check your connection.', 'error');
+        console.error(err);
+      } finally {
+        stopLoading();
+        hideLoading();
+      }
+    };
+
+    // Toggle forms
+    $('showSignup').onclick = e => {
+      e.preventDefault();
+      $('loginForm').style.display = 'none';
+      $('signupForm').style.display = 'block';
+    };
+
+    $('showLogin').onclick = e => {
+      e.preventDefault();
+      $('signupForm').style.display = 'none';
+      $('loginForm').style.display = 'block';
+    };
+
+    // Enter key to submit
+    document.addEventListener('keydown', e => {
+      if (e.key === 'Enter') {
+        if ($('signupForm').style.display !== 'none') $('btnSignup').click();
+        else $('btnLogin').click();
+      }
     });
-  } catch (err) {
-    res.status(500).json({ success: false, message: 'Server error' });
-  }
-});
 
-// Login
-app.post('/api/login', async (req, res) => {
-  try {
-    const { phone, password } = req.body;
-
-    const user = await User.findOne({ phone });
-    if (!user) {
-      return res.status(401).json({ success: false, message: 'User not found' });
-    }
-
-    const match = await bcrypt.compare(password, user.password);
-    if (!match) {
-      return res.status(401).json({ success: false, message: 'Incorrect password' });
-    }
-
-    res.json({
-      success: true,
-      user: { _id: user._id, name: user.name, phone: user.phone }
+    // If already logged in → redirect to home
+    window.addEventListener('load', () => {
+      if (localStorage.getItem('chatpoint_user')) {
+        location.href = 'index.html';
+      }
     });
-  } catch (err) {
-    res.status(500).json({ success: false, message: 'Server error' });
-  }
-});
+  </script>
+</body>
+</html>
